fix: add history and change block migration
